# edge-av-fusion

./: .gitignore  README.md
config/: pipeline.yaml
docs/: ARCHITECTURE.md  TASKS.md
docs/assets/: power_trace_gpu.txt
ros2_ws/src/av_fusion_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/av_fusion_interfaces/msg/: AvDetection.msg
ros2_ws/src/av_fusion_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/av_fusion_node/av_fusion_node/: node.py
ros2_ws/src/av_fusion_node/launch/: pipeline.launch.py
scripts/: esp32_bridge.py  setup_env.sh
src/avfusion/: __init__.py  config.py  pipeline.py
src/avfusion/audio/: __init__.py  gst_alsa_source.py  gst_base.py  gst_file_source.py  pyaudio_source.py  ring_buffer.py  source_base.py
src/avfusion/bench/: __init__.py  doa_validation.py  latency.py  membw.py  power_sweep.py
src/avfusion/dsp/: __init__.py  gcc_phat.py  mel.py
src/avfusion/fusion/: __init__.py  fsm.py  tracker.py
src/avfusion/inference/: __init__.py  classifier.py  model.py  trt_engine.py
tests/: conftest.py  test_fsm.py  test_gcc_phat.py  test_mel.py  test_ring_buffer.py  test_tracker.py
tools/: analyze_clip.py  build_trt_engine.py  calibrate_mic.py  export_onnx.py  train_classifier.py  visualize_mel.py
