<?xml version="1.0"?>
<package format="3">
  <name>av_fusion_node</name>
  <version>0.1.0</version>
  <description>rclpy node running the edge-av-fusion perception pipeline.</description>
  <maintainer email="ttae.yeong.lee@gmail.com">Taeyeong Lee</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>av_fusion_interfaces</depend>

  <test_depend>ament_copyright</test_depend>

  <export><build_type>ament_python</build_type></export>
</package>
